manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-service
  namespace: togglemaster-targeting
  labels:
    app.kubernetes.io/name: targeting-service
    app.kubernetes.io/component: targeting
    app.kubernetes.io/part-of: togglemaster
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: targeting-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: targeting-service
        app.kubernetes.io/component: targeting
        app.kubernetes.io/part-of: togglemaster
    spec:
      containers:
        - name: targeting-service
          image: 730335650747.dkr.ecr.us-east-1.amazonaws.com/togglemaster/targeting-service:acc691928a9ff7021b6fd954202314bfe23fb6ef
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8003
              protocol: TCP
          command: ["/bin/sh", "-c"]
          args:
            - |
              export DATABASE_URL=$(cat /shared/database_url)
              exec opentelemetry-instrument gunicorn --bind 0.0.0.0:8003 --workers 4 --timeout 60 app:app
          volumeMounts:
            - name: shared-data
              mountPath: /shared
              readOnly: true
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 512Mi

      volumes:
        - name: shared-data
          emptyDir: {}
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: targeting-service
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
