manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: togglemaster-targeting
  labels:
    app.kubernetes.io/name: targeting-service
    app.kubernetes.io/component: targeting
    app.kubernetes.io/part-of: togglemaster
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: targeting-service
  ports:
    - name: http
      port: 8003
      targetPort: 8003
      protocol: TCP
