manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: targeting-service-ingress
  namespace: togglemaster-targeting
  labels:
    app.kubernetes.io/name: targeting-service
    app.kubernetes.io/component: targeting
    app.kubernetes.io/part-of: togglemaster
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: toggle.pt
      http:
        paths:
          - path: /targeting(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: targeting-service
                port:
                  number: 8003
